Header logo area containing the main navigation is now fixed. The background transparency fades when the page is scrolled. TBD fix the placement of the menu and search buttons on mobile. Currently they appear behind the fixed area.

--- a/themes/academydeliver/css-compiled/template.css
+++ b/themes/academydeliver/css-compiled/template.css
@@ -152,11 +152,17 @@ b, strong, label, th {
   height: 12rem;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0.05rem 1rem rgba(0, 0, 0, 0.15); }
-  #header > .grid, #header .logo, #header #navbar {
+  #header > .grid, #header #navbar {
     height: 50%; }
+  #header.scrolled .logo {
+    background-color: #001f49;
+    transition: background-color 1s ease; }
   #header .logo {
-    background-color: rgba(0, 173, 239, 0.3);
-    border-bottom: 1px solid #00adef; }
+    background-color: rgba(0, 31, 73, 0.8);
+    border-bottom: 1px solid #00adef;
+    position: fixed;
+    height: 6rem;
+    width: 100%; }
     @media only all and (max-width: 47.938em) {
       #header .logo h3 {
         font-size: 1.9rem; } }
